Bug 222464 - "Edit Scheduled Transaction" dialog fails to remember Frequency and Payment Method
Summary: "Edit Scheduled Transaction" dialog fails to remember Frequency and Payment M...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-12 23:12 UTC by uetsah
Modified: 2010-01-13 02:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uetsah 2010-01-12 23:12:49 UTC
Version:           3.95.0-svn1073343 (using Devel)
Installed from:    Compiled sources

I've created a scheduled transaction (withdrawal from bank account) in a new database.

In the Edit Scheduled Transaction dialog, I set the payment method to "Standing order" and the frequency to once a month.
However, after I click OK, the frequency is shown as "Weekly" and the Payment method field is blank for this transaction in the "Scheduled transactions" list.

Choosing right click >> "Edit Scheduled Transaction" again and repeating the above steps doesn't make a difference, either - it just won't remember these two settings.

(It correctly remembers the Account, Pay to, Category, Next du date and Amount settings)
Comment 1 Alvaro Soliverez 2010-01-13 02:29:02 UTC
SVN commit 1073868 by asoliverez:

Almost finished porting KMyMoneyCombo plus fixed an issue in KMyMoneyGeneralCombo

BUG:222464

 M  +0 -88     kmymoneycombo.cpp  
 M  +0 -55     kmymoneycombo.h  
 M  +82 -2     kmymoneymvccombo.cpp  
 M  +58 -1     kmymoneymvccombo.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1073868