Almost finished porting KMyMoneyCombo plus fixed an issue in KMyMoneyGeneralCombo

BUG:222464

svn path=/trunk/playground/office/kmymoney/; revision=1073868